--- a/pages/inicio.html
+++ b/pages/inicio.html
@@ -97,7 +97,7 @@
         <div class="redes">
             <div class="d-flex">
                 <div class="d-flex me-4">
-                    <img src="../entrega-02/pages/img/apple-store.png" class="me-3">
+                    <img src="../pages/img/apple-store.png" class="me-3">
                     <div>
                         <small>Consíguela en</small>
                         <p class="fw-bold mb-0">App Store</p>
