--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="bootstrap-5.1.3-dist/css/bootstrap.css">
 
     <!-- Link a mi css -->
-    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="../css/estiloscss.css">
     <!-- TITULO DE MI PAGINA -->
     <title>Soluciones Nutricionales</title>
 </head>
